# seo-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  seo_tool.py
.github/workflows/: python.yml
src/seo_tool/: analysis.py  cli.py  crawler.py  keyword.py  report.py
tests/: test_analysis.py  test_keyword.py  test_seo_tool.py
